--- a/Demo2/test.html
+++ b/Demo2/test.html
@@ -17,36 +17,46 @@
     function canvasSupport() {
         return Modernizr.canvas;
     }
-    CanvasRenderingContext2D.prototype.sector = function (x, y, radius, sDeg, eDeg) {
-// 初始保存
-        this.save();
-// 位移到目标点
-        this.translate(x, y);
-        this.beginPath();
-// 画出圆弧
-        this.arc(0,0,radius,sDeg, eDeg);
-// 再次保存以备旋转
-        this.save();
-// 旋转至起始角度
-        this.rotate(eDeg);
-// 移动到终点，准备连接终点与圆心
-        this.moveTo(radius,0);
-// 连接到圆心
-        this.lineTo(0,0);
-// 还原
-        this.restore();
-// 旋转至起点角度
-        this.rotate(sDeg);
-// 从圆心连接到起点
-        this.lineTo(radius,0);
-        this.closePath();
-// 还原到最初保存的状态
-        this.restore();
-        return this;
-    }
+//     CanvasRenderingContext2D.prototype.sector = function (x, y, radius, sDeg, eDeg) {
+// // 初始保存
+//         this.save();
+// // 位移到目标点
+//         this.translate(x, y);
+//         this.beginPath();
+// // 画出圆弧
+//         this.arc(0,0,radius,sDeg, eDeg);
+// // 再次保存以备旋转
+//         this.save();
+// // 旋转至起始角度
+//         this.rotate(eDeg);
+// // 移动到终点，准备连接终点与圆心
+//         this.moveTo(radius,0);
+// // 连接到圆心
+//         this.lineTo(0,0);
+// // 还原
+//         this.restore();
+// // 旋转至起点角度
+//         this.rotate(sDeg);
+// // 从圆心连接到起点
+//         this.lineTo(radius,0);
+//         this.closePath();
+// // 还原到最初保存的状态
+//         this.restore();
+//         return this;
+//     }
     function canvasApp() {
         if (!canvasSupport()) return;
+        drawScreen();
         function drawScreen() {
+            var leaf = new Image();
+            leaf.src = './Imgs/leaf-1.png';
+            var c = document.getElementById("myCanvas");
+            var ctx = c.getContext('2d');
+            ctx.drawImage(leaf,100,100,150,150);
+            ctx.translate(175,175);
+            ctx.rotate(Math.PI/(Math.random()*10+1));
+            ctx.translate(-75,-75);
+            ctx.drawImage(leaf,0,0,150,150);
         //     context.fillStyle = '#eeeeee';
         //     context.fillRect(0,0,theCanvas.width,theCanvas.height);
         //     context.strokeStyle = '#000000';
@@ -67,10 +77,10 @@
         //     context.arc(ball.x,ball.y,ball.radius,0,Math.PI*2,true);
         //     context.closePath();
         //     context.fill();
-            var ctx = document.getElementById('myCanvas').getContext('2d');
-            ctx.sector(200,200,100,Math.PI/180*135,Math.PI/180*45).fill();
+        //     var ctx = document.getElementById('myCanvas').getContext('2d');
+        //     ctx.sector(200,200,100,Math.PI/180*135,Math.PI/180*45).fill();
         }
-        drawScreen()
+        // drawScreen()
         // var theCanvas = document.getElementById("myCanvas");
         // var context = theCanvas.getContext('2d');
         // var speed = 6;
